@@ -2,14 +2,12 @@
 
 /* { dg-do compile } */
 
-#define unsigned
-__extension__ typedef __SIZE_TYPE__ ssize_t;
-#undef unsigned
+__extension__ typedef __INTPTR_TYPE__ intptr_t;
 
 struct sockaddr_un {
     char sun_path[1];
 };
-const unsigned SI_SUN_HEAD_LEN = (ssize_t)(((struct sockaddr_un *)0)->sun_path);
+const unsigned SI_SUN_HEAD_LEN = (intptr_t)(((struct sockaddr_un *)0)->sun_path);
 int SiGetPeerName ()
 {
     return SI_SUN_HEAD_LEN;
